--- a/chezmoi/.chezmoi.yaml.tmpl
+++ b/chezmoi/.chezmoi.yaml.tmpl
@@ -1,10 +1,10 @@
-{{- $name := "Manassarn Manoonchai" -}}
-{{- $email := "manassarn@gmail.com" -}}
-{{- $github_user := "narze" -}}
+{{- $name := "Alexey Panov" -}}
+{{- $email := "panov1552@gmail.com" -}}
+{{- $github_user := "lexpanov" -}}
 {{- $asdf_version := "0.9.0" -}}
-{{- $computer_name := default "narze-computer-name" (env "CM_computer_name") -}}
-{{- $hostname := default "narze" (env "CM_hostname") -}}
-{{- $gpg_recipient := "7A6FE00E074F2B913EBD33B5F05DC9084102F48A" -}}
+{{- $computer_name := default "lexpanov-computer-name" (env "CM_computer_name") -}}
+{{- $hostname := default "lexpanov" (env "CM_hostname") -}}
+{{- $gpg_recipient := "" -}}
 {{- $is_codespace := false }}
 {{- $nas_mount_path := default "~/mnt/nas" (env "NAS_PATH") -}}
 
