--- a/chezmoi/dot_zshrc.tmpl
+++ b/chezmoi/dot_zshrc.tmpl
@@ -1,36 +1,27 @@
 # Personal Zsh configuration file. It is strongly recommended to keep all
 # shell customization and configuration (including exported environment
-# variables such as PATH) in this file or in files source by it.
+# variables such as PATH) in this file or in files sourced from it.
 #
 # Documentation: https://github.com/romkatv/zsh4humans/blob/v5/README.md.
 
-if [[ -r "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh" ]]; then
-  source "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh"
-fi
+# if [[ -r "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh" ]]; then
+#   source "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh"
+# fi
 
-if [[ -n "${GITHUB_CODESPACE_TOKEN}" ]]; then
-  typeset -g POWERLEVEL9K_INSTANT_PROMPT=quiet
-fi
-
-export EDITOR=vim
+export EDITOR=nano
 export TERM=xterm-256color
-export LC_ALL=en_US.UTF-8
-export LANG=en_US.UTF-8
-export GOPATH=$HOME/go
-export PATH=$PATH:$GOPATH/bin
-export PATH="/Applications/Postgres.app/Contents/Versions/9.6/bin:$PATH"
-export PATH="$PATH:${HOME}/.krew/bin"
-export PATH="$PATH:${HOME}/.local/bin"
-export PATH="$PATH:$HOME/.arkade/bin"
+export LC_ALL=ru_RU.UTF-8
+export LANG=ru_RU.UTF-8
+# export GOPATH=$HOME/go
+# export PATH=$PATH:$GOPATH/bin
+# export PATH="$PATH:${HOME}/.local/bin"
+export PATH="$PATH:/snap/bin"
+export PATH="$PATH:$HOME/.cargo/bin"
 
 # Chezmoi cached variables
 export CM_computer_name={{ .computer_name }}
 export CM_hostname={{ .hostname }}
 
-# force zsh-you-should-use
-# export YSU_HARDCORE=1
-
-# export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES
 
 # History
 # https://unix.stackexchange.com/questions/273861/unlimited-history-in-zsh
@@ -56,23 +47,23 @@ ulimit -n 8192
 # POWERLEVEL9K_LEFT_PROMPT_ELEMENTS=(user dir vcs rbenv rspec_stats newline)
 # POWERLEVEL9K_RIGHT_PROMPT_ELEMENTS=(status root_indicator ip background_jobs history time)
 
-# Prefer using emacs mode for zsh
-bindkey -e
-
 # Periodic auto-update on Zsh startup: 'ask' or 'no'.
 # You can manually run `z4h update` to update everything.
 zstyle ':z4h:' auto-update      'no'
 # Ask whether to auto-update this often; has no effect if auto-update is 'no'.
 zstyle ':z4h:' auto-update-days '28'
 
-# Start tmux if not already in tmux.
-# zstyle ':z4h:' start-tmux       command tmux -u new -A -D -t z4h
+# Keyboard type: 'mac' or 'pc'.
+zstyle ':z4h:bindkey' keyboard  'pc'
+
+# Don't start tmux.
+zstyle ':z4h:' start-tmux       no
 
 # Move prompt to the bottom when zsh starts and on Ctrl+L.
-zstyle ':z4h:' prompt-at-bottom 'yes'
+zstyle ':z4h:' prompt-at-bottom 'no'
 
-# Keyboard type: 'mac' or 'pc'.
-zstyle ':z4h:bindkey' keyboard  'mac'
+# Mark up shell's output with semantic information.
+zstyle ':z4h:' term-shell-integration 'yes'
 
 # Right-arrow key accepts one character ('partial-accept') from
 # command autosuggestions or the whole thing ('accept')?
@@ -82,20 +73,23 @@ zstyle ':z4h:autosuggestions' forward-char 'accept'
 zstyle ':z4h:fzf-complete' recurse-dirs 'yes'
 
 # Enable direnv to automatically source .envrc files.
-zstyle ':z4h:direnv'         enable 'yes'
+zstyle ':z4h:direnv'         enable 'no'
 # Show "loading" and "unloading" notifications from direnv.
 zstyle ':z4h:direnv:success' notify 'yes'
 
 # Enable ('yes') or disable ('no') automatic teleportation of z4h over
-# ssh when connecting to these hosts.
+# SSH when connecting to these hosts.
 zstyle ':z4h:ssh:example-hostname1'   enable 'yes'
 zstyle ':z4h:ssh:*.example-hostname2' enable 'no'
 # The default value if none of the overrides above match the hostname.
 zstyle ':z4h:ssh:*'                   enable 'no'
 
-# Send these files over to the remote host when connecting over ssh to the
+# Send these files over to the remote host when connecting over SSH to the
 # enabled hosts.
 zstyle ':z4h:ssh:*' send-extra-files '~/.nanorc' '~/.env.zsh'
+
+zstyle ':z4h:term-title:local' preexec '%* ${1//\%/%%}'
+zstyle ':z4h:term-title:local' precmd  '${USER}@${HOST%%.*} : ${PWD/#$HOME/~}'
 
 # Clone additional Git repositories from GitHub.
 #
@@ -132,8 +126,8 @@ z4h load   mollifier/cd-gitroot
 z4h load   olets/zsh-abbr
 
 # Define key bindings.
-z4h bindkey undo Ctrl+/  # undo the last command line change
-z4h bindkey redo Alt+/   # redo the last undone command line change
+z4h bindkey undo Shift+Tab  # undo the last command line change
+z4h bindkey redo Alt+/      # redo the last undone command line change
 
 z4h bindkey z4h-cd-back    Shift+Left   # cd into the previous directory
 z4h bindkey z4h-cd-forward Shift+Right  # cd into the next directory
@@ -152,43 +146,15 @@ compdef _directories md
 
 # Define aliases.
 alias tree='tree -a -I .git'
+alias ls='lsd'
 
 # Add flags to existing aliases.
-alias ls="${aliases[ls]:-ls} -A"
+alias ls="${aliases[ls]:-ls} -vAF"
 
 # Set shell options: http://zsh.sourceforge.net/Doc/Release/Options.html.
 setopt glob_dots     # no special treatment for file names with a leading dot
 setopt no_auto_menu  # require an extra TAB press to open the completion menu
 
-{{ if (eq .chezmoi.os "darwin" ) -}}
-# Mac specific config
-if [[ "$(uname -m)" == "arm64" ]]; then
-  # 3. x86 brew bin
-  if [ -f /usr/local/bin/brew ]; then
-    eval $(/usr/local/bin/brew shellenv)
-  fi
-
-  # 2. arm64 brew
-  if [ -f /opt/homebrew/bin/brew ]; then
-    eval $(/opt/homebrew/bin/brew shellenv)
-  fi
-else
-  # 3. arm64 brew
-  if [ -f /opt/homebrew/bin/brew ]; then
-    eval $(/opt/homebrew/bin/brew shellenv)
-  fi
-
-  # 2. x86 brew bin
-  if [ -f /usr/local/bin/brew ]; then
-    eval $(/usr/local/bin/brew shellenv)
-  fi
-fi
-
-# 1. user brew
-if [ -f ~/homebrew/bin/brew ]; then
-  eval $(~/homebrew/bin/brew shellenv)
-fi
-{{- end }}
 
 # Cleanup duplicated PATHs (mostly from shellenv evals above)
 PATH="$(perl -e 'print join(":", grep { not $seen{$_}++ } split(/:/, $ENV{PATH}))')"
@@ -197,43 +163,6 @@ if [ -f "$HOME/.zshrc.local" ]; then
   source "$HOME/.zshrc.local"
 fi
 
-# NixOS
-if [ -e ~/.nix-profile/etc/profile.d/nix.sh ]; then
-  . ~/.nix-profile/etc/profile.d/nix.sh;
-fi
-
-# Zoxide : prompt hook mode
-if command -v zoxide &> /dev/null; then
-  eval "$(zoxide init zsh --hook prompt)"
-fi
-
-z4h source $HOME/.config/zsh/config/00_aliases.zsh
-z4h source $HOME/.config/zsh/config/10_options.zsh
-z4h source $HOME/.config/zsh/config/20_functions.zsh
-
-z4h source $HOME/.asdf/asdf.sh
-
-if [ -d "$HOME/.asdf/plugins/direnv" ]; then
-  eval "$(asdf exec direnv hook zsh)"
-  direnv() { asdf exec direnv "$@"; }
-fi
-
-# Timing App Terminal Support
-if [ $ITERM_SESSION_ID ]; then
-  DISABLE_AUTO_TITLE="true"
-  echo -ne "\033]0; @ ${HOST%%.*} : ${PWD/#$HOME/~} \007"
-fi
-
-precmd() {
-  echo -ne "\033]0; @ ${HOST%%.*} : ${PWD/#$HOME/~} \007"
-}
-
-# Meteor
-export PATH=/Users/narze/.meteor:$PATH
-
-# bun completions
-[ -s "/Users/narze/.bun/_bun" ] && source "/Users/narze/.bun/_bun"
-
-# Bun
-export BUN_INSTALL="/Users/narze/.bun"
-export PATH="$BUN_INSTALL/bin:$PATH"
+# z4h source $HOME/.config/zsh/config/00_aliases.zsh
+# z4h source $HOME/.config/zsh/config/10_options.zsh
+# z4h source $HOME/.config/zsh/config/20_functions.zsh
