--- a/chezmoi/.chezmoi.yaml.tmpl
+++ b/chezmoi/.chezmoi.yaml.tmpl
@@ -4,7 +4,7 @@
 {{- $asdf_version := "0.9.0" -}}
 {{- $computer_name := default "lexpanov-computer-name" (env "CM_computer_name") -}}
 {{- $hostname := default "lexpanov" (env "CM_hostname") -}}
-{{- $gpg_recipient := "" -}}
+{{- $gpg_recipient := "9FE1D2DF4E856B7244A1F20CD4262095DEE78AC6" -}}
 {{- $is_codespace := false }}
 {{- $nas_mount_path := default "~/mnt/nas" (env "NAS_PATH") -}}
 
