--- a/chezmoi/dot_zshrc.tmpl
+++ b/chezmoi/dot_zshrc.tmpl
@@ -146,10 +146,10 @@ compdef _directories md
 
 # Define aliases.
 alias tree='tree -a -I .git'
-alias ls='lsd'
+# alias ls='lsd'
 
 # Add flags to existing aliases.
-alias ls="${aliases[ls]:-ls} -vAF"
+# alias ls="${aliases[ls]:-ls} -vAF"
 
 # Set shell options: http://zsh.sourceforge.net/Doc/Release/Options.html.
 setopt glob_dots     # no special treatment for file names with a leading dot
