--- a/chezmoi/.chezmoi.yaml.tmpl
+++ b/chezmoi/.chezmoi.yaml.tmpl
@@ -31,6 +31,7 @@ data:
   name: {{ $name | quote }}
   email: {{ $email | quote }}
   github_user: {{ $github_user | quote }}
+  gpg_recipient: {{ $gpg_recipient | quote }}
   asdf_version: {{ $asdf_version | quote }}
   computer_name: {{ $computer_name | quote }}
   hostname: {{ $hostname | quote }}
