--- a/chezmoi/.chezmoi.yaml.tmpl
+++ b/chezmoi/.chezmoi.yaml.tmpl
@@ -1,7 +1,7 @@
 {{- $name := "Alexey Panov" -}}
-{{- $email := "panov1552@gmail.com" -}}
+{{- $email := "apanov@astralinux.ru" -}}
 {{- $github_user := "lexpanov" -}}
-{{- $asdf_version := "0.9.0" -}}
+{{- $asdf_version := "0.10.2" -}}
 {{- $computer_name := default "lexpanov-computer-name" (env "CM_computer_name") -}}
 {{- $hostname := default "lexpanov" (env "CM_hostname") -}}
 {{- $gpg_recipient := "9FE1D2DF4E856B7244A1F20CD4262095DEE78AC6" -}}
